envio de parametros

--- a/API_Project/api/templates/expedientes.html
+++ b/API_Project/api/templates/expedientes.html
@@ -113,7 +113,7 @@
                                 {
                                     extend: 'pdfHtml5',
                                     title: 'Expedientes',
-                                    messageTop: 'Expedientes',
+                                    messageTop: 'Reporte elaborado desde: {{ desde }} hasta: {{ hasta }}',
 
                                     customize: function ( doc ) {
                                         doc.content[2].table.widths = ['*', '*', '*', '*','*','*'];
