--- a/API_Project/api/templates/reporte_bitacora.html
+++ b/API_Project/api/templates/reporte_bitacora.html
@@ -112,7 +112,7 @@
                                 {
                                     extend: 'pdfHtml5',
                                     title: 'Bitacora de Acciones Realizadas',
-                                    messageTop: 'Bitacora de Acciones',
+                                    messageTop: 'Reporte elaborado desde: {{ desde }} hasta: {{ hasta }}',
 
                                     customize: function ( doc ) {
                                         doc.content[2].table.widths = ['*', '*', '*', '*'];
