--- a/API_Project/api/templates/reporte_inspecciones.html
+++ b/API_Project/api/templates/reporte_inspecciones.html
@@ -110,7 +110,7 @@
                                 {
                                     extend: 'pdfHtml5',
                                     title: 'Inspecciones Realizadas',
-                                    messageTop: 'Inspecciones',
+                                    messageTop: 'Reporte elaborado desde: {{ desde }} hasta: {{ hasta }}',
 
                                     customize: function ( doc ) {
                                         doc.content[2].table.widths = ['*', '*', '*', '*'];
